--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to My GitHub Pages Site</h1>
     <p>This is my first GitHub Pages deployment!</p>
+    <!-- ここに画像を追加するぞ -->
+     <img src="my_image.png" alt="私の画像">
 </body>
 </html>
